add_executable(test1 test1.cpp)
target_link_libraries(test1 feipu)
add_executable(test2 test2.cpp)
target_link_libraries(test2 feipu)
add_executable(test_eventloopPool test_eventloopPool.cpp)
target_link_libraries(test_eventloopPool feipu)
add_executable(test_eventloopThread test_eventloopThread.cpp)
target_link_libraries(test_eventloopThread feipu)
add_executable(test_udpserver test_udpserver.cpp)
target_link_libraries(test_udpserver feipu)